data/usersCode/efvefv/question2/error.txt
/home/gauravghati/clash/data/usersCode/efvefv/question2/code2-5.cpp:1:1: error: ‘sdbvsnvduy’ does not name a type
 sdbvsnvduy
 ^~~~~~~~~~
